# base_cmake_glfw

./: .gitignore  CMakeLists.txt
src/: BoxGameObject.hpp  Camera.cpp  Camera.h  DeltaTime.hpp  Mesh.cpp  Mesh.h  Shader.cpp  Texture.cpp  Texture.h  Window.cpp  Window.h  main.cpp  shader.h
test/: testExample.cpp
